[build-system]
requires = ["setuptools-git-version"]

[project]
name = "content-hash"
description = "Python implementation of EIP 1577 content hash"
authors = [{email = "projects@filips.si", name = "Filip Š"}]
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
keywords = [
    "ethereum",
    "ethereum-name-service",
    "ens",
    "eip1577",
    "web3",
    "decentralized",
]
dependencies = [
    "multiformats>=0.3.1.post4",
    "base58check==1.0.2",  # for b58 encode/decode
    "pycryptodomex",  # required by multiformats for keccak
]
dynamic = ["version"]
license = {file = "LICENSE.md"}

[project.urls]
Homepage = "https://github.com/filips123/ContentHashPy/"
Repository = "https://github.com/filips123/ContentHashPy.git"

[tool.setuptools_scm]
fallback_version = "2.0.0"

[project.optional-dependencies]
lint = ["pylint"]
tests = ["pytest", "pytest-cov"]
