[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "content-hash"
description = "Python implementation of EIP 1577 content hash"
authors = [{ email = "projects@filips.si", name = "Filip Š" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]

keywords = [
    "ethereum",
    "ethereum-name-service",
    "ens",
    "eip1577",
    "erc1577",
    "web3",
    "decentralized",
]

dependencies = [
    "multiformats>=0.3.1.post4",
    "base58check==1.0.2", # for b58 encode/decode
    "pycryptodomex", # required by multiformats for keccak
]

[project.optional-dependencies]
lint = ["pylint", "black", "mypy"]
test = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/filips123/ContentHashPy/"
Repository = "https://github.com/filips123/ContentHashPy.git"
Issues = "https://github.com/filips123/ContentHashPy/issues"
Changelog = "https://github.com/filips123/ContentHashPy/releases"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.pylint]
max-line-length = 110

[tool.black]
line-length = 110
disable = ["R0801"]

[tool.mypy]
python_version = "3.8"
show_column_numbers = true
show_error_codes = true
allow_redefinition = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
exclude = "__main__.py"
